--- a/src/components/ProjectPage/ProjectSidebar/ProjectSidebar.module.scss
+++ b/src/components/ProjectPage/ProjectSidebar/ProjectSidebar.module.scss
@@ -7,7 +7,7 @@
   min-height: 100%;
   max-height: 100vh;
   overflow-x: hidden;
-  overflow-y: auto;
+  overflow-y: scroll;
   background: var(--sidebar);
   padding-bottom: 114px;
 }
