--- a/src/components/ProjectPage/ProjectSidebarContent/ProjectSidebarContent.module.scss
+++ b/src/components/ProjectPage/ProjectSidebarContent/ProjectSidebarContent.module.scss
@@ -6,10 +6,11 @@
   padding: 32px 50px;
   &:last-child {
     position: fixed;
-    width: 455px;
+    width: 449px;
     left: 0px;
     bottom: 0px;
     background: var(--sidebar);
+    background: linear-gradient(0deg, var(--sidebar) 70%, rgba(0, 0, 0, 0) 100%);
     z-index: 2;
   }
 }
