--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -2,7 +2,7 @@
   display: block;
   width: 104px;
   height: 30px;
-  position: absolute;
+  position: fixed;
   top: 30px;
   z-index: 4;
   &.left {
