--- a/src/components/ProjectPage/ProjectBody/ProjectBody.module.scss
+++ b/src/components/ProjectPage/ProjectBody/ProjectBody.module.scss
@@ -1,14 +1,22 @@
 .ProjectBody {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
   align-content: center;
   width: calc(100% - 455px);
   max-width: 100%;
   height: 100%;
-  padding: 90px 30px;
+  padding: 80px 34px;
   min-height: 100vh;
   background: var(--main);
   position: relative;
+  overflow: scroll;
+  &:before {
+    content: '';
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 6px;
+    height: 6px;
+    background-color: var(--main);
+    z-index: 5;
+  }
 }
