--- a/src/components/IFrame/IFrame.module.scss
+++ b/src/components/IFrame/IFrame.module.scss
@@ -15,6 +15,17 @@
   background: var(--sidebar);
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.8), 0px 10px 24px 0px rgba(0, 0, 0, 0.6), 0px 0px 0.5px 0px rgba(0, 0, 0, 0.4);
   margin: auto;
+  &.Desctop {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 0px;
+    border: none;
+    .Top,
+    .Bottom {
+      display: none;
+    }
+  }
 }
 
 .IFrame {
@@ -31,7 +42,7 @@
     position: relative;
     z-index: 1;
     width: 100%;
-    height: calc(100% + 48px);
+    height: 100%;
     border: none;
   }
   img {
