--- a/src/components/Buttons/StopButton/StopButton.module.scss
+++ b/src/components/Buttons/StopButton/StopButton.module.scss
@@ -21,8 +21,10 @@
     position: absolute;
     z-index: 1;
     border-radius: 54px;
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
+    transform: scale(0.8);
+    transition: 0.3s;
     background: var(--red);
   }
   span {
@@ -32,5 +34,10 @@
     font-size: 12px;
     font-weight: 600;
     line-height: 1;
+  }
+  &:hover {
+    &:before {
+      transform: scale(1);
+    }
   }
 }
