--- a/src/components/Camera/Camera.module.scss
+++ b/src/components/Camera/Camera.module.scss
@@ -1,15 +1,36 @@
 .Camera {
   display: flex;
   flex-wrap: wrap;
-  width: 240px;
+  width: 130px;
   height: auto;
   position: absolute;
   right: 35px;
-  top: 100px;
+  top: 86px;
   gap: 20px;
   z-index: 6;
   transition: 0.6s;
   transform: translate(0px, 0px);
+  div {
+    display: block;
+    position: relative;
+    span {
+      text-align: center;
+      font-size: 14px;
+      position: absolute;
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: column;
+      align-content: center;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      width: 100%;
+      top: 50%;
+      transform: translate(0%, -50%);
+      padding: 10px;
+    }
+  }
+
   &:hover {
     .HideCamera {
       opacity: 1;
@@ -27,9 +48,9 @@
 .Video {
   display: block;
   width: 100%;
-  height: 350px;
+  height: 185px;
   border-radius: 20px;
-  background: var(--black);
+  background: var(--select);
   object-fit: cover;
   object-position: center;
   transform: scale(-1, 1);
@@ -42,11 +63,11 @@
   align-items: center;
   align-content: center;
   position: absolute;
-  right: 14px;
-  top: 14px;
+  right: 10px;
+  top: 10px;
   cursor: pointer;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border: none;
   border-radius: 24px;
   background-color: var(--red);
@@ -55,5 +76,7 @@
   transition: 0.3s;
   svg {
     display: block;
+    width: 74%;
+    height: 74%;
   }
 }
