--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,7 @@
   --scrollbar: #636363;
   --sidebar: #2c2c2c;
   --select: #1e1e1e;
+  --session-hover: #4d5876;
   --font: 'Involve', sans-serif;
 }
 
