--- a/src/components/Image/Image.module.scss
+++ b/src/components/Image/Image.module.scss
@@ -20,6 +20,8 @@
       position: absolute;
       width: 30px;
       height: 30px;
+      max-width: 40%;
+      max-height: 40%;
       border-radius: 30px;
       border-left: 1px solid rgba(0, 0, 0, 0);
       border-top: 1px solid rgba(0, 0, 0, 0);
