--- a/src/components/Sidebar/SidebarContent/SidebarContent.module.scss
+++ b/src/components/Sidebar/SidebarContent/SidebarContent.module.scss
@@ -13,4 +13,7 @@
     background: linear-gradient(0deg, var(--sidebar) 70%, rgba(0, 0, 0, 0) 100%);
     z-index: 2;
   }
+  &:first-child {
+    position: relative;
+  }
 }
